# slgui

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  settings.rs
ui/: app-window.slint  global.slint
ui/pages/: main.slint
