[package]
name = "slgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = "1.14.1"
tokio = { version = "1.49.0", features = ["full"] }

[build-dependencies]
slint-build = "1.14.1"
