[package]
name = "slgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.1"
crc32fast = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = "1.14.1"
tokio = { version = "1.49.0", features = ["full"] }
network_comm = { path = "../network_comm" }

[build-dependencies]
slint-build = "1.14.1"
